--- a/ecommerce/src/index.html
+++ b/ecommerce/src/index.html
@@ -74,7 +74,36 @@
             </div>
         </section>
 
-        <section></section>
+        <section class="flex items-stretch justify-around">
+            <div class="feature-style">
+                <img src="../assets/feature-1.png" class="feature-img" alt="Free shipping">
+                <h6 class="feature-h6 h6-style">Free Shipping</h6>
+            </div>
+            <div class="feature-style">
+                <img src="../assets/feature-2.jpg" alt="Online Order" class="feature-img">
+                <h6 class="feature-h6 h6-style">Online Order</h6>
+            </div>
+            <div class="feature-style">
+                <img src="../assets/feature-3.jpg" alt="Save Money" class="feature-img">
+                <h6 class="feature-h6 h6-style">Save Money</h6>
+            </div>
+            <div class="feature-style">
+                <img src="../assets/feature-4.jpg" alt="Promotions" class="feature-img">
+                <h6 class="feature-h6 h6-style">Promotions</h6>
+            </div>
+            <div class="feature-style">
+                <img src="../assets/feature-5.png" alt="Happy sell" class="feature-img">
+                <h6 class="feature-h6 h6-style">Happy Sell</h6>
+            </div>
+            <div class="feature-style">
+                <img src="../assets/feature-6.jpg" alt="24x7" class="feature-img">
+                <h6 class="feature-h6 h6-style">24x7</h6>
+            </div>
+        </section>
+
+        <section>
+            <h1></h1>
+        </section>
     </main>
 </body>
 
